# vecembed

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  generate_php_code.sh  generate_string_entities.py  pushOnly.sh
proto/: vecembed.proto
src/: logger.rs  main.rs
src/embed/: chunk_strings.rs  collections.rs  create.rs  errors.rs  get.rs  import.rs  instances.rs  mod.rs
src/entities/: api_keys.rs  automation_runs.rs  automations.rs  billing_addresses.rs  cache.rs  cache_locks.rs  chat_messages.rs  content_generated_document.rs  content_generated_text.rs  content_index_backlog.rs  content_sources.rs  content_user_query.rs  contents.rs  countries.rs  document_type_sections.rs  document_types.rs  failed_jobs.rs  file_uploads.rs  files.rs  generated_document_generated_text.rs  generated_documents.rs  generated_text_uploaded_file.rs  generated_text_user_query.rs  generated_texts.rs  greenhouse_apis.rs  job_batches.rs  jobs.rs  migrations.rs  mod.rs  notifications.rs  o_auth_identities.rs  password_resets.rs  personal_access_tokens.rs  podcast_episodes.rs  prelude.rs  referral_redemptions.rs  rss_feeds.rs  sea_orm_active_enums.rs  sessions.rs  short_url_visits.rs  (+14 more)
src/grpc/: messaging.rs  mod.rs  server.rs
